<resources>
    <string name="app_name">Wall-P</string>
    <string name="load_info_images_loading">Loading images…</string>
    <string name="toolbar_settings">Settings</string>

    <string name="settings_orientation">Orientation</string>
    <string name="settings_orientation_vertical">Vertical</string>
    <string name="settings_orientation_horizontal">Horizontal</string>
    <string name="settings_orientation_all">All</string>
    <string name="settings_category">Category</string>
    <string name="settings_color">Color</string>
    <string name="settings_order">Order</string>
    <string name="settings_order_popular">Popular</string>
    <string name="settings_order_latest">Latest</string>
    <string name="settings_checkbox_editors_choice">Editor\'s choice </string>
    <string name="settings_checkbox_grayscale">Grayscale</string>
    <string name="settings_checkbox_transparent">Transparent background</string>

    <string name="menu_search_settings">Search settings</string>
</resources>